# spiral-teacher

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/contracts/: learner.md  models.md  orchestrator.md  reader.md  teacher.md
examples/eureka/: tutorial.md
examples/flash-attention/: tutorial.md
examples/rf-agent/: tutorial.md
scripts/: run_e2e.py  synthesize.py
src/spiral_teacher/: cli.py  models.py  orchestrator.py  utils.py
src/spiral_teacher/agents/: learner.py  reader.py  synthesizer.py  teacher.py
src/spiral_teacher/profiles/: ml_engineer.yaml
src/spiral_teacher/prompts/: learner.md  reader.md  synthesizer.md  teacher.md
tests/: test_learner.py  test_models.py  test_orchestrator.py  test_reader.py  test_teacher.py
