[project]
name = "spiral-teacher"
version = "0.1.0"
description = "Multi-agent adaptive teaching content generation system"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
spiral-teacher = "spiral_teacher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spiral_teacher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external API access",
]
asyncio_mode = "auto"
